BinaryWriter implemented succesfully
BinaryReader is still in development

--- a/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj
+++ b/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj
@@ -130,13 +130,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\code\BinaryWriter.cpp" />
     <ClCompile Include="..\..\code\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Asset.hpp" />
+    <ClInclude Include="..\..\code\BinaryReader.hpp" />
     <ClInclude Include="..\..\code\BinaryWriter.hpp" />
-    <ClInclude Include="..\..\code\JsonHandler.hpp" />
+    <ClInclude Include="..\..\code\JsonVariables.hpp" />
+    <ClInclude Include="..\..\code\JsonReader.hpp" />
+    <ClInclude Include="..\..\code\JsonWriter.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
