--- a/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj.filters
+++ b/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="..\..\code\main.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\code\BinaryWriter.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Asset.hpp">
@@ -29,7 +26,16 @@
     <ClInclude Include="..\..\code\BinaryWriter.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\code\JsonHandler.hpp">
+    <ClInclude Include="..\..\code\JsonWriter.hpp">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\BinaryReader.hpp">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\JsonReader.hpp">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\JsonVariables.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
