--- a/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj
+++ b/ParserJSON/projects/visual-studio-2022/ParserJSON.vcxproj
@@ -136,9 +136,7 @@
     <ClInclude Include="..\..\code\Asset.hpp" />
     <ClInclude Include="..\..\code\BinaryReader.hpp" />
     <ClInclude Include="..\..\code\BinaryWriter.hpp" />
-    <ClInclude Include="..\..\code\JsonVariables.hpp" />
-    <ClInclude Include="..\..\code\JsonWriter.hpp" />
-    <ClInclude Include="..\..\code\JsonReader.hpp" />
+    <ClInclude Include="..\..\code\JsonToBinary.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
